k8s/kyverno/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Containers must run as non-root user (securityContext.runAsNonRoot must be true)."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
