k8s/kyverno/limit-max-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: limit-max-resources
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-max-cpu-memory
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - cloud-cost-dev
      validate:
        message: "Container resource limits exceed the maximum allowed quota (Max CPU: 2, Max Memory: 2Gi)."
        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    memory: "<=2Gi"
                    cpu: "<=2"
